# concordia-courses

./: .deepsource.toml  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json
backend/: Dockerfile  HELP.md  docker-compose.yml  nixpacks.toml  pom.xml  pyproject.toml
backend/python/: main.py  requirements.txt  test.py
backend/python/data/input/: subject-catalogs.json
backend/python/data/output/: processed_courses.json
backend/python/processor/: processor.py
backend/python/scraper/: scraper.py
backend/python/scrapping/moodle/: test.py
backend/python/scrapping/moodle/data/output/: failed_retrievals.json
backend/python/scrapping/ratemyprofessor/data/output/: concordiaProfRateMyProf.json
backend/python/scrapping/ratemyprofessor/scraper/: teachersreviews.py
backend/python/utils/: utilities.py
backend/src/main/resources/: application-dev.yml  application.properties  application.yml  banner.txt  custom.properties  subject-catalogs.json
backend/src/main/resources/rmpScraping/: concordiaJMSBProfRateMyProf.json  department_descriptions.json  processReviews.py  subject-catalogs.json  teacherids.py  updated_ids.json  utils.py
backend/src/main/resources/seeds/: concordia_instructors.json  distribution.json
backend/src/main/resources/static/: index.html
backend/src/main/resources/templates/: emailtemplate.html  enrollmentUpdateReport.html  newTokenVerification.html  newUserVerification.html  resetPassword.html  resetPasswordConfirmation.html  rmpScrapingFailure.html  rmpScrapingSuccess.html
demo/: HELP.md
tools/: Modify.java
(+473 files in other folders)
