[tool.poetry]
name = "concordia.courses rmp scraping"
version = "0.1.0"
description = "Rate professors and courses at concordia"
authors = ["Beaudelaire <Beaudelaire@tutamail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
